--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,11 +15,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-          <li class="navbar_li"><%= link_to "Add a Movie!", new_movie_path, class: "navbar_element", style: "color: #094f2e;" %></li>
-          <li class="navbar_li"><%= link_to "Profile", current_user, class: "navbar_element", style: "color: #094f2e;" %></li>
+          <li class="navbar_li"><%= link_to "Add a Movie!", new_movie_path, class: "navbar_element", style: "color: #188945;" %></li>
+          <li class="navbar_li"><%= link_to "Profile", current_user, class: "navbar_element", style: "color: #188945;" %></li>
         <% else %>
-          <li class="navbar_li"><%= link_to "Sign Up!", new_user_registration_path, class: "navbar_element", style: "color: #094f2e;" %></li>
-          <li class="navbar_li"><%= link_to "Sign in", new_user_session_path, class: "navbar_element", style: "color: #094f2e;"%></li>
+          <li class="navbar_li"><%= link_to "Sign Up!", new_user_registration_path, class: "navbar_element", style: "color: #188945;" %></li>
+          <li class="navbar_li"><%= link_to "Sign in", new_user_session_path, class: "navbar_element", style: "color: #188945;"%></li>
         <% end %>
         <li class="dropdown" style="padding: 10px">
           <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-danger">
@@ -27,11 +27,11 @@
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" aria-labelledby="dLabel">
-            <li><%= link_to "New Releases", "/new_releases", style: "color: #094f2e;"%></li>
-            <li><%= link_to "Action", "/action", style: "color: #094f2e;"%></li>
-            <li><%= link_to "Romance", "/romance", style: "color: #094f2e;"%></li>
-            <li><%= link_to "Animated", "/animated", style: "color: #094f2e;"%></li>
-            <li><%= link_to "Comedy", "/comedy", style: "color: #094f2e;"%></li>
+            <li><%= link_to "New Releases", "/new_releases", style: "color: #188945;"%></li>
+            <li><%= link_to "Action", "/action", style: "color: #188945;"%></li>
+            <li><%= link_to "Romance", "/romance", style: "color: #188945;"%></li>
+            <li><%= link_to "Animated", "/animated", style: "color: #188945;"%></li>
+            <li><%= link_to "Comedy", "/comedy", style: "color: #188945;"%></li>
             
           </ul>
         </li>
