--- a/app/views/movies/_carousel.html.erb
+++ b/app/views/movies/_carousel.html.erb
@@ -3,7 +3,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <%= image_tag('space.jpg')%>
+      <%= image_tag('spacesfr.jpg')%>
     </div>
   </div>
 </div>
