altered link to make fonts visible in heroku

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,7 @@
 
 .form_title {
 	font-family: 'Audiowide', cursive;
+	src: font-url("/assets/icomoon.eot");
 	color: white;
 	font-size: 30px;
 }
