--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -26,9 +26,10 @@
   <div class="field">
     <%= f.text_field :director, hide_label: true, placeholder: "Director" %>
   </div>
-  <%= f.select(:genre, ["Romance", "Action", "Animated"], hide_label: true, include_blank: "Genre") %>
-
-  <%= f.select(:grade, ['G', 'PG', 'PG13', 'R'], hide_label: true, include_blank: "MPAA Rating") %>
+  <div class="navbar_element" style="color: white;">Genre</div>
+  <%= f.select(:genre, ["Romance", "Action", "Animated"], hide_label: true, include_blank: true) %>
+  <div class="navbar_element" style="color: white;">MPAA Rating</div>
+  <%= f.select(:grade, ['G', 'PG', 'PG13', 'R'], hide_label: true, include_blank: true)%>
   <div>
     <%= f.file_field :image, hide_label: true, class: "btn btn-default", placeholder: "Select a File"%>
   </div>
