--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,8 +9,8 @@
           <table class="table">
             <tbody>
               <tr>
-                <td><strong>Title:</strong></td>
-                <td><%= @movie.title %></td>
+                <td><strong>Year:</strong></td>
+                <td><%= @movie.year %></td>
               </tr>
               <tr>
                 <td><strong>Movie length:</strong></td>
@@ -19,6 +19,10 @@
               <tr>
                 <td><strong>Director:</strong></td>
                 <td><%= @movie.director %></td>
+              </tr>
+              <tr>
+                <td><strong>MPAA Rating</strong></td>
+                <td><%= @movie.grade %></td>
               </tr>
             </tbody>
           </table>
