--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -30,9 +30,10 @@
   <%= f.select(:genre, ["Romance", "Action", "Animated"], hide_label: true, include_blank: true) %>
   <div class="navbar_element" style="color: white;">MPAA Rating</div>
   <%= f.select(:grade, ['G', 'PG', 'PG13', 'R'], hide_label: true, include_blank: true)%>
-  <div>
-    <%= f.file_field :image, hide_label: true, class: "btn btn-default", placeholder: "Select a File"%>
+  <div class="filed">
+    <%= f.text_field :image_url, hide_label: true, placeholder: "Image Url"%>
   </div>
+
   <div class="actions">
     <%= f.submit "Post Movie", class: "btn btn-default"  %>
   </div>
