--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,7 +16,7 @@
     <%@new_releases.each do |movie|%>
       <li class="sub">
         <div class="thumbnail">
-          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+          <%= link_to (image_tag movie.image_url.url(:medium), class: 'image'), movie %>
         </div>
       </li>
     <% end %>
