--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Moviefull</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= favicon_link_tag '/favicon.ico' %>
+  <%= favicon_link_tag 'favicon.ico' %>
   <%= csrf_meta_tags %>
   <link href='//fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
